--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -242,8 +242,8 @@ p {
 }
 
 .btn-primary {
-  background-color: #e6a756;
-  border-color: #e6a756;
+  background-color: #3385ff;
+  border-color: #3385ff;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
