--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -226,11 +226,11 @@ p {
 }
 
 .footer {
-  background-color: rgba(47, 23, 15, 0.9);
+  background-color: rgba(0, 17, 36, 0.9);
 }
 
 .text-primary {
-  color: #3385ff !important;
+  color: #55e3f2 !important;
 }
 
 .bg-primary {
