--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -75,7 +75,7 @@ p {
 }
 
 #mainNav {
-  background-color: rgba(47, 23, 15, 0.9);
+  background-color: rgba((0, 17, 36, 0.9);
   font-family: 'Raleway';
 }
 
